--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# Force LF line endings, needed for Docker to work on Windows
+* text=auto eol=lf# Force LF line endings, needed for Docker to work on Windows
 *.sh text eol=lf
